<resources>
    <string name="app_name">ICN FoodList</string>
    <string name="title_activity_product_menu">Food Categories</string>
    <string name="title_activity_details">Food Details</string>
    <string name="title_friendly">Friendly</string>
    <string name="title_tryit">Try It!</string>
    <string name="title_caution">Caution!</string>
    <string name="title_progress_bar">Loading Data...</string>
    <string name="title_progress_network_error">Network Connection Unavaiable. Please try again later.</string>
    <string name="title_progress_parse_unavailable">Network Server Unavaiable. Please try again later</string>
    <string name="menu_text_flare_fighting_foods">Flare Fighting Foods</string>
    <string name="menu_text_about_food_list">About Our Food List</string>
    <string name="menu_text_beer_wine_spirits">Beer Wine and Spirits</string>
    <string name="menu_text_about_icn">About IC-Network.com</string>
    <string name="menu_text_about_our_sponsor">About Our Sponsor</string>
    <string name="title_activity_about_icn">About IC-Network.com</string>
    <string name="about_icn_intro">The Interstitial Cystitis Network is a woman owned, "social advocacy" health education company dedicated to interstitial cystitis and other pelvic pain disorders.
        Using the internet, we create innovative solutions to the pressing problems facing patients diagnosed with urologic conditions. The IC Network is the top rated Website in peer reviewed research
        studies conducted by Harvard Medical School (2011) and the University of London (2013). For the past 16 years, we have provided critical 24/7 support to patients in need, developed new educational
        materials, conducted vital research, provided webinars / lectures and created IC awareness campaigns, all at NO COST to the patients who visit our website.</string>
    <string name="about_icn_html">
        <![CDATA[
        <p>Learn more about IC! - http://www.ic-network.com</p>
        <p>Watch the Living With IC Video Series - http://www.ic-network.com/videos/</p>
        <p>Meet other patients and join our live support chats! - <a href="http://www.ic-network.com/support/">http://www.ic-network.com/support/</a></p>
        <p>Sign up for our free e-newsletter! - <a href="http://www.ic-network.com/newsletters/">http://www.ic-network.com/newsletters/</a></p>
        <p>Subscribe to the IC Optimist Magazine! - <a href="http://www.ic-network.com/subscriptions/">http://www.ic-network.com/subscriptions/</a></p>
        <p>Learn more about products that can help you, today, manage your symptoms! - <a href="http://www.icnsales.com">http://www.icnsales.com</a></p>
        <p>Find us on Facebook. - <a href="https://www.facebook.com/pages/Interstitial-Cystitis-Network/396285769568?ref=ts">https://www.facebook.com/pages/Interstitial-Cystitis-Network/396285769568?ref=ts</a></p>
        <p>Tweet us at Twitter - <a href="http://www.twitter.com/icnjill/">http://www.twitter.com/icnjill/</a></p>
        ]]>
    </string>
    <string name="title_activity_beer_wine">Wine Beer and Spirits</string>
    <string name="beer_wine_intro">Beer wine intro</string>
    <string name="beer_wine_html">Beer wine html</string>
    <string name="title_activity_about_food_list">About Our Food List</string>
    <string name="about_food_list_intro">Most patients with bladder sensitivity have noticed that their bladder symptoms worsen after they eat certain foods or beverages. Why?
        Foods containing high levels of acid, caffeine, histamine or alcohol can trigger bladder irritation and inflammation.</string>
    <string name="about_food_list_html">
        <![CDATA[
        <p>This application offers a quick reference guide to help you select more bladder friendly foods. This information is based upon research data, clinician experience,
        various IC books and years of anecdotal patient reports collected through the Interstitial Cystitis Network patient community.</p>
        <p>http://www.ic-network.com/</p>
               ]]>
    </string>
    <string name="about_food_list_html2">
        <![CDATA[
<p>While this application can’t predict how your bladder will react to every food, it does offer general trends seen in the interstitial cystitis (IC) patient community.</p>
<p>“Bladder Friendly Foods” are those which most patients tolerate well.  These are the foods and beverages we suggest that you consume when you are having bladder discomfort.
They rarely trigger bladder irritation.</p>
<p>“Foods Worth Trying Cautiously” are generally safe though they may irritate more sensitive bladders. They should be tried in small quantities first.</p>
<p>“Foods To Avoid” are those well known for triggering bladder discomfort.</p>

<h3>How long should you try diet modification?</h3>
<p>We suggest three to six months at a minimum. As your symptoms improve, you may be able to introduce more risk foods. Coffee drinkers, for example, may be able to tolerate herbal or low acid
coffees. Because IC symptoms often wax and wane, most patients find that sticking to a lower acid diet to be helpful in both preventing and managing diet induced flares.</p>

<h3>Acknowledgements</h3>

<p>Beverley Laumann and Julie Beyer RD who have written three superb books discussing the IC diet that have helped thousands of patients eat a balanced healthy diet.</p>
<p>Barbara Shorter RD, CDN and Robert Moldwin MD provided valuable IC and diet research studies which validated some but not all of our patient reports.</p>

<h3>Suggested Reading</h3>

<p>The ICN Diet Guide: <br>
http://www.ic-network.com/diet/</p>

<h3>About The Author</h3>
<p>Jill Osborne MA was the first support group leader to recognize the value of the internet in bringing support to patients who were too ill leave their homes. She founded and built the IC Network
website in 1995. She wears many hats: writer, editor, speaker, researcher, programmer and animal lover. She would love to hear your comments and suggestions about this app! jill@ic-network.com</p>
<h3>Copyright & Disclaimer</h3>
<p>Copyright &copy; 2012, 2016 - Interstitial Cystitis Network - All Rights Reserved</p>
<p><a href="http://www.ic-network.com">http://www.ic-network.com</a></p>
<p>This application, the IC Network website and publications are for informational purposes only. The IC Network is not a medical authority nor do they provide any medical advice. Nothing contained
in this should be considered medical advice and should not be relied upon as a substitute for consultation with a qualified medical professional. We strongly recommend that you discuss your medical
care and treatment with your personal medical care provider. Only that medical professional can, and should, give you medical advice.</p>
        ]]>
    </string>
    <string name="title_activity_flare_fighting">Flare Fighting Foods</string>
    <string name="flare_fighting_foods_intro">The worst thing that you can do when your bladder symptoms are active is to eat something that may irritate the bladder further. A daily cup of coffee,
        black tea, green tea, soda pop and even cranberry juice can trigger bladder pain and discomfort. Thus, your first line of defense in both preventing and managing bladder flares is to modify
        your diet.
        <i>Foods labelled with a (+) sign have been reported by patients to be especially soothing during bladder flares.</i></string>
    <string name="flare_fighting_foods_html">
        <![CDATA[
        <h3>What can you eat during a flare?</h3>
<p>There is no reason to be afraid to eat! There are many foods that you can enjoy even with a sensitive bladder though every patient has individual food sensitivities that may take a little time
for you to figure out. For severe flares, stick with foods in the “bladder friendly” category. When your bladder symptoms improve and you’re ready to add variety to your diet, try small portions of
the foods in the "try it" list.   Avoid foods in the "caution" category.</p>
<p>Scrambled eggs and hash browns, for example, make a very viable breakfast. For lunch, consider having some homemade soup or a turkey sandwich.  Almonds, carrots, crackers, pears make for energy
boosting snacks in the afternoon. For large meals, a nice cut of meat served with vegetables, rice or potatoes is ideal. Looking for something sweet? Think vanilla or caramel ice cream.</p>
<h3>What should you drink?</h3>
<p>Chamomile or peppermint herbal teas can be especially soothing and have a proven antispasmodic effect. Water, hot water with honey or sugar, hot milk and even vanilla milkshakes are also bladder
friendly. Coffees, black and green teas, sodas and citrus juices should be avoided.</p>
<h3>Afraid to eat?</h3>
<p>There is no reason to be afraid to eat. There are many foods that you can enjoy and we hope that this application will help you!  If you are unsure of what to eat, we encourage you to read some
of the books currently available about diet and IC, as well as to watch our "Living with IC" video series. Registered dietitians can also provide assistance. The ICN offers personal coaching
sessions with a registered dietitian.</p>

<h3>Additional Information:</h3>

<p>ICN Flare Management Guide<br>
http://www.ic-network.com/selfhelp/flares.html</p>
<p>The ICN Diet Guide<br>
http://www.ic-network.com/diet/</p>
<p>Living with IC Video Series<br>
http://www.ic-network.com/videos/</p>

        ]]>
    </string>
    <string name="url_www_icnetwork_com">http://www.ic-network.com</string>
    <string name="url_www_icnetwork_com_wellness">http://www.icnsales.com/wellness-coaching/</string>
    <string name="title_activity_wellness_coaching">Wellness Coaching</string>
    <string name="menu_text_wellness_coaching">Wellness Coaching</string>
    <string name="wellness_coaching_intro">Are you seeking information about IC? Looking to talk with a seasoned professional? The Interstitial Cystitis Network offers one on one coaching sessions
        for those who cannot attend other classes or would be more comfortable in a private setting. ICN coaching sessions are for informational purposes only. They do NOT provide personal medical
        advice, nor are they intended to be a substitute for professional medical advice, care or counseling services. As educators, their goal is to help you become an advocate for your
        medical care. We strongly encourage you to gather information from multiple sources, to explore pros and cons of various strategies and, most of all, have good discussions with your
        personal medical care team about your choices and plans.</string>
    <string name="wellness_couaching_html">http://www.icnsales.com/wellness-coaching/</string>
    <string name="title_activity_about_our_sponsor">About Our Sponsor</string>
    <string name="about_our_sponsor_intro"></string>
</resources>