<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about_food_list"
    tools:context="com.meteoru.kalei.foodslist.AboutFoodListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAboutFoodListIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_food_list_intro"
                android:textColor="#000"
                android:textSize="14sp"/>

            <TextView
            android:id="@+id/tvAboutFoodListHtml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAboutFoodListIntro"
            android:layout_marginTop="8dp"
            android:text="@string/about_food_list_html"
            android:textColor="#000"
            android:textSize="14sp"/>

            <Button
                android:id="@+id/btWebICNetwork"
                android:text="@string/url_www_icnetwork_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#33691e"/>

            <TextView
                android:id="@+id/tvAboutFoodListHtml2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAboutFoodListHtml"
                android:layout_marginTop="8dp"
                android:text="@string/about_food_list_html2"
                android:textColor="#000"
                android:textSize="14sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
