<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_details"
    tools:context="com.meteoru.kalei.foodslist.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=""
                android:textColor="#000"
                android:layout_below="@+id/tvName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvFriendlyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_friendly"
                android:textColor="#060"
                android:textStyle="bold"
                android:layout_below="@+id/tvDescription"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/paragraph_top_margin"/>

            <TextView
                android:id="@+id/tvFriendlyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=""
                android:textColor="#000"
                android:layout_below="@+id/tvFriendlyTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvTryItTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_tryit"
                android:textColor="#F60"
                android:textStyle="bold"
                android:layout_below="@+id/tvFriendlyText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/paragraph_top_margin"/>

            <TextView
                android:id="@+id/tvTryItText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:autoLink="all"
                android:textColor="#000"
                android:layout_below="@+id/tvTryItTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/title_caution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#C00"
                android:textStyle="bold"
                android:id="@+id/tvCautionTitle"
                android:layout_below="@+id/tvTryItText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/paragraph_top_margin"/>

            <TextView
                android:id="@+id/tvCautionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:autoLink="all"
                android:textColor="#000"
                android:layout_below="@+id/tvCautionTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
